--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+0.0.3 - 2012-06-01
+------------------
+
+- Fix brown bag
+  [aclark]
+
 0.0.2 - 2012-06-01
 ------------------
 
