--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+0.0.8 - 2013-05-29
+------------------
+
+- Upgrade bootstrap to 2.3.2
+- Add splash screen
+
 0.0.7 - 2012-06-11
 ------------------
 
