--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,8 +4,8 @@ Changelog
 0.0.8 - 2013-05-29
 ------------------
 
-- Upgrade bootstrap to 2.3.2
-- Add splash screen
+- Upgrade Twitter Bootstrap version to 2.3.2
+- Add splash screen h/t: Plone
 
 0.0.7 - 2012-06-11
 ------------------
